# draw-in-terminal

./: CMakeLists.txt  LICENSE  README.md  draw_in_terminal.hpp  draw_on_terminal.hpp  main.cpp
.github/workflows/: cmake.yml
scripts/: main_simple.py
